WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11452
REGRESSION (
r16736
-
r16801
): Incorrect repaint of fixed boxes
https://bugs.webkit.org/show_bug.cgi?id=11452
Summary
REGRESSION (r16736-r16801): Incorrect repaint of fixed boxes
mitz
Reported
2006-10-29 16:12:47 PST
Fixed boxes aren't treated as such for repaint rect calculation, so if the document is scrolled, they don't repaint properly. See attached test case. I'll try to narrow down the revision range later, but this regression is probably from the change that rendered "fixed" parameter to computeAbsoluteRepaintRect() useless.
Attachments
Test case
(341 bytes, text/html)
2006-10-29 16:14 PST
,
mitz
no flags
Details
Add back RenderView::computeAbsoluteRepaintRect()
(33.99 KB, patch)
2006-12-26 23:18 PST
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2006-10-29 16:14:01 PST
Created
attachment 11278
[details]
Test case Pre-scrolled for your convenience, just click Test.
mitz
Comment 2
2006-12-25 12:10:07 PST
***
Bug 11969
has been marked as a duplicate of this bug. ***
mitz
Comment 3
2006-12-25 12:17:48 PST
(In reply to
comment #0
)
> the change that rendered "fixed" parameter to > computeAbsoluteRepaintRect() useless.
http://trac.webkit.org/projects/webkit/changeset/16764
mitz
Comment 4
2006-12-26 23:18:24 PST
Created
attachment 12052
[details]
Add back RenderView::computeAbsoluteRepaintRect()
Dave Hyatt
Comment 5
2006-12-27 00:21:49 PST
Comment on
attachment 12052
[details]
Add back RenderView::computeAbsoluteRepaintRect() r=me
Sam Weinig
Comment 6
2006-12-27 15:58:54 PST
Landed in
r18443
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug