LayoutTests:

Reviewed by Hyatt.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=11452
          REGRESSION (r16736-r16801): Incorrect repaint of fixed boxes

        * fast/repaint/fixed-expected.checksum: Added.
        * fast/repaint/fixed-expected.png: Added.
        * fast/repaint/fixed-expected.txt: Added.
        * fast/repaint/fixed.html: Added.

WebCore:

        Reviewed by Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=11452
          REGRESSION (r16736-r16801): Incorrect repaint of fixed boxes

        Test: fast/repaint/fixed.html

        * rendering/RenderView.cpp:
        (WebCore::RenderView::computeAbsoluteRepaintRect): Re-added.
        * rendering/RenderView.h:



Canonical link: https://commits.webkit.org/15487@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18443 268f45cc-cd09-0410-ab3c-d52691b4dbfc